--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/gnomeontherun/angular-github-app/issues"
   },
-  "homepage": "https://github.com/gnomeontherun/angular-github-app"
+  "homepage": "https://github.com/gnomeontherun/angular-github-app",
+  "jspm": {
+    "directories": {
+      "baseURL": "app"
+    },
+    "dependencies": {
+      "angular-material": "github:angular/bower-material@^0.8.3"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.0.12",
+      "babel-runtime": "npm:babel-runtime@^5.0.12",
+      "core-js": "npm:core-js@^0.8.1"
+    }
+  }
 }
