--- a/package.json
+++ b/package.json
@@ -28,5 +28,12 @@
       "babel-runtime": "npm:babel-runtime@^5.0.12",
       "core-js": "npm:core-js@^0.8.1"
     }
+  },
+  "dependencies": {
+    "node-static": "^0.7.6"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0"
   }
 }
