--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
       "baseURL": "app"
     },
     "dependencies": {
-      "angular-material": "github:angular/bower-material@^0.8.3"
+      "angular": "github:angular/bower-angular@^1.3.15",
+      "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
+      "angular-aria": "github:angular/bower-angular-aria@^1.3.15",
+      "angular-material": "github:angular/bower-material@^0.8.3",
+      "css": "github:systemjs/plugin-css@^0.1.9"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.0.12",
