--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "angular": "github:angular/bower-angular@^1.3.15",
       "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
       "angular-aria": "github:angular/bower-angular-aria@^1.3.15",
-      "angular-material": "github:angular/bower-material@^0.8.3",
+      "angular-material": "github:angular/bower-material@0.9.0-rc1",
       "css": "github:systemjs/plugin-css@^0.1.9"
     },
     "devDependencies": {
