--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
       "angular-aria": "github:angular/bower-angular-aria@^1.3.15",
       "angular-material": "github:angular/bower-material@0.9.0-rc1",
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
       "css": "github:systemjs/plugin-css@^0.1.9"
     },
     "devDependencies": {
